--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=8050
 
 #kết nối SQL server
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
@@ -17,3 +17,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Diale
 #Cấu hình JSP Template Engine trong Spring boot
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=tkemail89@gmail.com
+spring.mail.password=uneewoxxyojsjixx
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.socketFactory.port=465
+spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback=false
+support.email=tkemail89@gmail.com
