--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8050
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.url=jdbc:sqlserver://localhost;databaseName=WebProjectST7
 spring.datasource.username=sa
-spring.datasource.password=123456
+spring.datasource.password=1234
 
 #JPA
 spring.jpa.show-sql=true
@@ -18,6 +18,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Diale
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
+#Cấu hình gửi email
 spring.mail.host=smtp.gmail.com
 spring.mail.username=tkemail89@gmail.com
 spring.mail.password=uneewoxxyojsjixx
